FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Account_Country__c.field-meta.xml
<CustomField>
    <fullName>Account_Country__c</fullName>
    <description>Created from JIRA ticket: BOPI-7.</description>
    <label>Account Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Account_Country</valueSetName>
    </valueSet>
</CustomField>