FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Account_Sub_Industry__c.field-meta.xml
<CustomField>
    <fullName>Account_Sub_Industry__c</fullName>
    <description>This field is used in price rules to determine when the price must be set to 0 for Trolley Payables - FX Fixed Fee and Outgoing Payments - FX Fixed Fee</description>
    <formula>TEXT(SBQQ__Quote__r.SBQQ__Account__r.Account_Sub_Industry__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Sub Industry</label>
    <type>Text</type>
</CustomField>