FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Actual_12_Months_Tuition_CC_Vol__c.field-meta.xml
<CustomField>
    <fullName>Actual_12_Months_Tuition_CC_Vol__c</fullName>
    <description>BOPI-436 Used in EDU ARR calculations</description>
    <inlineHelpText>Enter the actual 12 month tuition cc volume</inlineHelpText>
    <label>Actual 12 Months Tuition CC Vol</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>