FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Adjusted_Rate_Amount__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Rate_Amount__c</fullName>
    <description>Created from JIRA ticket: BOPI-6</description>
    <inlineHelpText>This field will be used when a Sales rep needs to enter a value for a rate that differs from the standard rate.</inlineHelpText>
    <label>Adjusted Rate (Amt)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>