FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Admin_Notes_Quote_Line__c.field-meta.xml
<CustomField>
    <fullName>Admin_Notes_Quote_Line__c</fullName>
    <description>Field used to capture notes from Admins. Admins to add ticket number when making changes to records.</description>
    <inlineHelpText>Field used to capture notes from Admins. Admins to add ticket number when making changes to records.</inlineHelpText>
    <label>Admin Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>