FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Annual_No_Surcharge_Transactions__c.field-meta.xml
<CustomField>
    <fullName>Annual_No_Surcharge_Transactions__c</fullName>
    <description>Field used to calculate the ARR for Edu Domestic Payments in UK</description>
    <inlineHelpText>Number of annual domestic surcharge transactions for this quote line</inlineHelpText>
    <label>Annual # Surcharge Transactions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>