FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Annual_Number_of_Domestic_Transactions__c.field-meta.xml
<CustomField>
    <fullName>Annual_Number_of_Domestic_Transactions__c</fullName>
    <description>Field used to calculate the ARR for Edu Domestic Payments in CAN/UK</description>
    <inlineHelpText>Number of total annual domestic transactions for this quote line</inlineHelpText>
    <label>Annual # of Domestic Transactions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>