FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Annual_Total_CC_Volume__c.field-meta.xml
<CustomField>
    <fullName>Annual_Total_CC_Volume__c</fullName>
    <description>BOPI-30 enter value for EDU UK Domestic ARR calculation</description>
    <inlineHelpText>Enter value for EDU UK Domestic ARR calculation</inlineHelpText>
    <label>Annual Total Domestic Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>