FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Annual_Total_Surcharge_Volume__c.field-meta.xml
<CustomField>
    <fullName>Annual_Total_Surcharge_Volume__c</fullName>
    <description>Field used to calculate the ARR for Edu Domestic Payments in UK</description>
    <label>Annual Total Surcharge Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>