FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Applied_Discount__c.field-meta.xml
<CustomField>
    <fullName>Applied_Discount__c</fullName>
    <description>This fields is used on approval email templates to show the discount percentage of a product regardless of its usage or rate type.</description>
    <formula>IF(
    IF(
        NOT(ISBLANK(Usage_Rate_Discount__c)),
        Usage_Rate_Discount__c,
        IF(SBQQ__TotalDiscountRate__c = 0, null, SBQQ__TotalDiscountRate__c)
    ) &gt; 0,
    IF(
        NOT(ISBLANK(Usage_Rate_Discount__c)),
        Usage_Rate_Discount__c,
        IF(SBQQ__TotalDiscountRate__c = 0, null, SBQQ__TotalDiscountRate__c)
    ),
    null
)</formula>
    <inlineHelpText>Total discount</inlineHelpText>
    <label>Applied Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>