FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/ARR_Field_Error__c.field-meta.xml
<CustomField>
    <fullName>ARR_Field_Error__c</fullName>
    <label>ARR Field Error</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>