FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Avg_FX_Trans_Amt__c.field-meta.xml
<CustomField>
    <fullName>Avg_FX_Trans_Amt__c</fullName>
    <description>BOPI-436 Used in ARR calculations</description>
    <inlineHelpText>The average transaction amount in Client&apos;s home currency for FX Cross Border Payments</inlineHelpText>
    <label>Avg FX Trans Amt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>