FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Avg_Quoted_Price__c.field-meta.xml
<CustomField>
    <fullName>Avg_Quoted_Price__c</fullName>
    <label>Avg Quoted Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>