FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Avg_Quoted_Rate__c.field-meta.xml
<CustomField>
    <fullName>Avg_Quoted_Rate__c</fullName>
    <label>Avg Quoted Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>