FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Bill_To_Ultimate_Parent__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Ultimate_Parent__c</fullName>
    <description>Returns top parent Account in hierarchy - used in selecting related ship to Account</description>
    <formula>BLANKVALUE( SBQQ__Quote__r.SBQQ__Account__r.Parent.Parent.Parent.Parent.Parent.Id ,
BLANKVALUE( SBQQ__Quote__r.SBQQ__Account__r.Parent.Parent.Parent.Parent.Id,
BLANKVALUE( SBQQ__Quote__r.SBQQ__Account__r.Parent.Parent.Parent.Id,
BLANKVALUE( SBQQ__Quote__r.SBQQ__Account__r.Parent.Parent.Id,
BLANKVALUE( SBQQ__Quote__r.SBQQ__Account__r.Parent.Id,
SBQQ__Quote__r.SBQQ__Account__r.Id)))))</formula>
    <inlineHelpText>Returns top parent Account in hierarchy</inlineHelpText>
    <label>Bill To Ultimate Parent</label>
    <type>Text</type>
</CustomField>