FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Billing_Frequency_email__c.field-meta.xml
<CustomField>
    <fullName>Billing_Frequency_email__c</fullName>
    <description>Billing Frequency for email/quote templates.</description>
    <formula>IF( ISPICKVAL(SBQQ__SubscriptionType__c, &apos;One-time&apos;) ,
&apos;One-time&apos;
,
TEXT(SBQQ__BillingFrequency__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Billing Frequency for email/quote templates.</inlineHelpText>
    <label>Billing_Frequency_email</label>
    <type>Text</type>
</CustomField>