FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/BPS_Upcharge__c.field-meta.xml
<CustomField>
    <fullName>BPS_Upcharge__c</fullName>
    <description>This field is used to calculate the ARR for Merchant Processing healthcare product (FWHC1300)</description>
    <label>BPS Upcharge</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>