FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Client_Home_CCY_XB_PYMNTS__c.field-meta.xml
<CustomField>
    <fullName>Client_Home_CCY_XB_PYMNTS__c</fullName>
    <description>BOPI-436 Used in ARR calculations</description>
    <inlineHelpText>Number of Client&apos;s home currency Cross Border Payments processed annually</inlineHelpText>
    <label>Client Home CCY XB PYMNTS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>