FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Country_Abbreviation__c.field-meta.xml
<CustomField>
    <fullName>Country_Abbreviation__c</fullName>
    <description>Created from JIRA ticket: BOPI-300.</description>
    <label>Country Abbreviation</label>
    <length>2</length>
    <type>Text</type>
</CustomField>