FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CPQ_QuoteLine_External_Migration_ID__c.field-meta.xml
<CustomField>
    <fullName>CPQ_QuoteLine_External_Migration_ID__c</fullName>
    <description>Used for CPQ data migration only</description>
    <inlineHelpText>Used for CPQ data migration only</inlineHelpText>
    <label>CPQ QuoteLine External Migration ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>