FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Debug_Mode__c.field-meta.xml
<CustomField>
    <fullName>Debug_Mode__c</fullName>
    <description>BOPI-715 For debugging purposes, certain fields in the Quote Line Editor (QLE) should only be visible to Admin users. To avoid cluttering the QLE with unnecessary information, these fields can be accessible on demand by setting this field to true on the Quote</description>
    <formula>SBQQ__Quote__r.Debug_Mode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Debug Mode</label>
    <type>Checkbox</type>
</CustomField>