FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Default_Rate_Details__c.field-meta.xml
<CustomField>
    <fullName>Default_Rate_Details__c</fullName>
    <description>Created for ticket BOPI-913</description>
    <label>Default Rate Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>