FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/DOM_Outgoing_PYMTS__c.field-meta.xml
<CustomField>
    <fullName>DOM_Outgoing_PYMTS__c</fullName>
    <description>BOPI-436 Used in ARR calculations</description>
    <inlineHelpText>Enter the number of Domestic Outgoing Payments</inlineHelpText>
    <label># DOM Outgoing PYMTS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>