FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Duplicate_QuoteLine__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_QuoteLine__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Duplicate QuoteLine</description>
    <inlineHelpText>Duplicate QuoteLine</inlineHelpText>
    <label>Duplicate QuoteLine</label>
    <type>Checkbox</type>
</CustomField>