FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Est_Annual_MM__c.field-meta.xml
<CustomField>
    <fullName>Est_Annual_MM__c</fullName>
    <description>BOPI-30 Used for ARR calculations in QL drawer, will twin to Opp Product</description>
    <inlineHelpText>Enter estimated annual money moved for ARR calculations</inlineHelpText>
    <label>Est Annual MM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>