FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Exception_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Exception_Pricing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created for BOPI-323</description>
    <inlineHelpText>Used for Pricing team to see when a product has exception pricing and needs to be approved manually</inlineHelpText>
    <label>Exception Pricing</label>
    <type>Checkbox</type>
</CustomField>