FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Expected_of_Apps_per_Year__c.field-meta.xml
<CustomField>
    <fullName>Expected_of_Apps_per_Year__c</fullName>
    <description>Field used to calculate the ARR for StudyLink Application Fees</description>
    <label>Expected # of Apps per Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>