FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/FX_XB_Outgoing_PYMTS__c.field-meta.xml
<CustomField>
    <fullName>FX_XB_Outgoing_PYMTS__c</fullName>
    <description>BOPI-436. Used in ARR calculations</description>
    <inlineHelpText>Number of FX Cross Border Outgoing Payments processed annually</inlineHelpText>
    <label>FX XB Outgoing PYMTS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>