FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Group_Allow_Product_Ramping__c.field-meta.xml
<CustomField>
    <fullName>Group_Allow_Product_Ramping__c</fullName>
    <formula>SBQQ__Group__r.Allow_Product_Ramping__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group Allow Product Ramping</label>
    <type>Checkbox</type>
</CustomField>