FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Implementation_Date__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Date__c</fullName>
    <description>Twinned from Subscription</description>
    <inlineHelpText>On amendment and renewal, this is the date the (first) platform implementation for this Quote Line was complete</inlineHelpText>
    <label>Implementation Date</label>
    <type>Date</type>
</CustomField>