FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Interchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>Interchange_Rate__c</fullName>
    <defaultValue>0.02</defaultValue>
    <description>This field is used to calculate the ARR for Merchant Processing healthcare product (FWHC1300)</description>
    <label>Interchange Rate</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>