FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/International_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>International_Sponsor__c</fullName>
    <description>BOPI-511: This field is utilized in the Opp_Product_SFS_ARR flow to calculate the ARR for the Third Party Invoicing (Usage) product (FWSI1200)</description>
    <label>Int&apos;l Sponsor %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>