FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Invalid_Account_Edit__c.field-meta.xml
<CustomField>
    <fullName>Invalid_Account_Edit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SALDEV-959: Field used in QCP to check if ship to account updated on child quote line of bundle.</description>
    <label>Invalid Account Edit</label>
    <type>Checkbox</type>
</CustomField>