FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Is_Amex_Gateway__c.field-meta.xml
<CustomField>
    <fullName>Is_Amex_Gateway__c</fullName>
    <formula>TEXT(Payment_Method__c) = &quot;Amex Gateway&quot;</formula>
    <label>Is Amex Gateway</label>
    <type>Checkbox</type>
</CustomField>