FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Last_12_Months_Payment_Plans__c.field-meta.xml
<CustomField>
    <fullName>Last_12_Months_Payment_Plans__c</fullName>
    <description>BOPI-436 Used for EDU ARR calculations</description>
    <inlineHelpText>Enter last 12 months payment plans for ARR calculations</inlineHelpText>
    <label>Last 12 Months Payment Plans</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>