FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Line_Description__c.field-meta.xml
<CustomField>
    <fullName>Line_Description__c</fullName>
    <description>Created from JIRA ticket: BOPI-9
Used on the QLE to help the Sales Rep with useful information to build the quote. It can display product info, errors and warnings</description>
    <inlineHelpText>Useful information to build the quote. It can display product info, errors and warnings</inlineHelpText>
    <label>Description</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>