FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Local_Currency__c.field-meta.xml
<CustomField>
    <fullName>Local_Currency__c</fullName>
    <description>Currency code updated by price rule according to location of the quote.</description>
    <inlineHelpText>Added as a part of SALDEV-953. Interacts with the Price Rule - Stamp Account Region values on Quote Line</inlineHelpText>
    <label>Local Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>