FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Monthly_Statements__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Statements__c</fullName>
    <description>Created from JIRA ticket: BOPI-319. (This field is used in a Configuration Attribute rule during quoting
)</description>
    <label>Monthly Statements</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>&lt;50k</fullName>
            </value>
            <value>
                <fullName>50k - 200k</fullName>
            </value>
            <value>
                <fullName>200k - 500k</fullName>
            </value>
            <value>
                <fullName>500k+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>