FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/MPP_Card_Usage_Included__c.field-meta.xml
<CustomField>
    <fullName>MPP_Card_Usage_Included__c</fullName>
    <description>BOPI-436 Used in SFS ARR calculations</description>
    <inlineHelpText>Is MPP card usage included in payment plans?</inlineHelpText>
    <label>MPP Card Usage Included?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>