FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/No_Charge_Transactions__c.field-meta.xml
<CustomField>
    <fullName>No_Charge_Transactions__c</fullName>
    <description>Created for JIRA ticket: BOPI-10. No Charge Transactions was created to support functionality that was not deployed. Keeping this field pending future updated configuration, but not in use currently</description>
    <inlineHelpText>Number of transactions that will not be charged to the customer</inlineHelpText>
    <label>No Charge Transactions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>