FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/No_International_Payers__c.field-meta.xml
<CustomField>
    <fullName>No_International_Payers__c</fullName>
    <description>BOPI-436 Used in ARR calculations</description>
    <inlineHelpText>Enter the # of international payers that this opportunity represents for Flywire for this Ship To Account. This may or may not be the same as the No International Payers on the Account record</inlineHelpText>
    <label>No. International Payers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>