FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/No_Processed_Volume__c.field-meta.xml
<CustomField>
    <fullName>No_Processed_Volume__c</fullName>
    <description>This field is used to calculate the ARR for Merchant Processing healthcare product (FWHC1300)</description>
    <label># Processed Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>