FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Non_Local_Currency__c.field-meta.xml
<CustomField>
    <fullName>Non_Local_Currency__c</fullName>
    <description>Used in price rule to look up to Usage Rates - Attributes table for XB and Domestic pricing. BOPI-343</description>
    <inlineHelpText>Is this for the Account&apos;s local currency?</inlineHelpText>
    <label>Non-Local Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>