FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NPR__c.field-meta.xml
<CustomField>
    <fullName>NPR__c</fullName>
    <description>Created from JIRA ticket: BOPI-139.</description>
    <label>NPR</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>&lt;$100M</fullName>
            </value>
            <value>
                <fullName>$100M-&lt;$500M</fullName>
            </value>
            <value>
                <fullName>$500M - $2B</fullName>
            </value>
            <value>
                <fullName>&gt;$2B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>