FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NS_Billing_Price__c.field-meta.xml
<CustomField>
    <fullName>NS_Billing_Price__c</fullName>
    <description>Created from JIRA ticket: BOPI-358. Updated for BOPI-868 to correct formula issue</description>
    <formula>IF(AND(SBQQ__ListPrice__c = 0, NOT(ISNULL(Quoted_Price__c))), Quoted_Price__c,
IF(SBQQ__ListPrice__c = 0, -1* SBQQ__TotalDiscountAmount__c ,
SBQQ__ListPrice__c *(1- SBQQ__TotalDiscountRate__c )))</formula>
    <label>NS Billing Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>