FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NS_ID__c.field-meta.xml
<CustomField>
    <fullName>NS_ID__c</fullName>
    <description>JIRA ticket: BOPI-2</description>
    <inlineHelpText>Field is needed for NetSuite Integration</inlineHelpText>
    <label>NS Line Item ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>