FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NS_Next_Bill_Type__c.field-meta.xml
<CustomField>
    <fullName>NS_Next_Bill_Type__c</fullName>
    <description>BOPI-337, used for calculating NS invoicing date</description>
    <label>NS Next Bill Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NS_Next_Bill_Type</valueSetName>
    </valueSet>
</CustomField>