FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NS_Usage_Rate__c.field-meta.xml
<CustomField>
    <fullName>NS_Usage_Rate__c</fullName>
    <description>Created from JIRA ticket: BOPI-145
BOPI-460 updated to replicate the field on Order Product to be consistent, now will be combined with the quoted usages and a symbol in a single field.</description>
    <formula>IF(
    NOT(ISBLANK(Adjusted_Rate_Percent__c)), Adjusted_Rate_Percent__c,
    IF(
        NOT(ISBLANK(Adjusted_Rate_Amount__c)), Adjusted_Rate_Amount__c,
        IF(
            NOT(ISBLANK(Usage_Rate__c)), Usage_Rate__c, Usage_Rate_Amt__c
        )
    )
)</formula>
    <inlineHelpText>Used to populate the Usage rate that will be sent to NS</inlineHelpText>
    <label>NS Usage Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>