FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/One_Door__c.field-meta.xml
<CustomField>
    <fullName>One_Door__c</fullName>
    <description>BOPI-511 This field is used to indicate that the ARR should be higher because it is a One Door integration when product is XB and Shipping Country UK</description>
    <label>One Door</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>