FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Opportunity_Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Record_Type_Name__c</fullName>
    <formula>SBQQ__Quote__r.SBQQ__Opportunity2__r.Record_Type_Name__c</formula>
    <label>Opportunity Record Type Name</label>
    <type>Text</type>
</CustomField>