FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Parent_Ship_to_Account__c.field-meta.xml
<CustomField>
    <fullName>Parent_Ship_to_Account__c</fullName>
    <description>Used In PriceRule</description>
    <formula>IF(NOT(ISBLANK(SBQQ__RequiredBy__c)), SBQQ__RequiredBy__r.Ship_To_Account__c, NULL)</formula>
    <inlineHelpText>Used In PriceRule</inlineHelpText>
    <label>Parent Ship to Account</label>
    <type>Text</type>
</CustomField>