FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Partner_Required__c.field-meta.xml
<CustomField>
    <fullName>Partner_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SALDEV-754 Twins to Quote Line, used in QCP to show Partner Type and Refer/Resell Partner fields in QLE drawer</description>
    <inlineHelpText>Set this field to True if this product requires the Partner Type and Refer/Resell Partner fields to be populated on Quote Lines</inlineHelpText>
    <label>Partner Required</label>
    <type>Checkbox</type>
</CustomField>