FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Payer__c.field-meta.xml
<CustomField>
    <fullName>Payer__c</fullName>
    <description>BOPI-337 twins from Product. QCP will dictate whether this field is visible in the quote line drawer so it can be edited by users</description>
    <inlineHelpText>Who by default pays for this product/service</inlineHelpText>
    <label>Payer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Payer</valueSetName>
    </valueSet>
</CustomField>