FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Payment_Method_Technical_Pass__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method_Technical_Pass__c</fullName>
    <label>Payment Method Technical Pass</label>
    <length>50</length>
    <type>Text</type>
</CustomField>