FLY wire David/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Per_Transaction_Upcharge__c.field-meta.xml
<CustomField>
    <fullName>Per_Transaction_Upcharge__c</fullName>
    <description>This field is used to calculate the ARR for Merchant Processing healthcare product (FWHC1300)</description>
    <label>Per Transaction Upcharge</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>